[gd_scene load_steps=10 format=2]

[ext_resource path="res://Pixel Adventure 1/Free/Traps/Fan/Off.png" type="Texture" id=1]
[ext_resource path="res://Pixel Adventure 1/Free/Traps/Fan/On (24x8).png" type="Texture" id=2]
[ext_resource path="res://scripts/Fan.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "on"
length = 0.15
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 11.5, 60.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.5, 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 5
emission_ring_radius = 16.0
emission_ring_inner_radius = 0.0
emission_ring_height = 0.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.67
gravity = Vector3( 0, 0, 0 )
initial_velocity = 136.63
initial_velocity_random = 0.09
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.3
scale_random = 0.57

[node name="Fan" type="StaticBody2D"]
collision_layer = 18
collision_mask = 0
script = ExtResource( 3 )

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/on = SubResource( 3 )

[node name="wind" type="Area2D" parent="."]
collision_layer = 16

[node name="area" type="CollisionShape2D" parent="wind"]
modulate = Color( 0.203922, 0.937255, 0, 1 )
position = Vector2( 0.5, -63.5 )
shape = SubResource( 4 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="wind_particles" type="Particles2D" parent="."]
position = Vector2( 0, -7 )
emitting = false
amount = 14
process_material = SubResource( 6 )

[connection signal="body_entered" from="wind" to="." method="_on_wind_body_entered"]
[connection signal="body_exited" from="wind" to="." method="_on_wind_body_exited"]
